sorted the overflow bug by setting the layout width to 100% rather than 100vw

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,8 +1,7 @@
 /* container holds the nav and sets the max widthof the content */
 
 .layoutContainer {
-	width: 100vw;
-	/* width: clamp(25rem, 20rem, 500px); */
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
